fix(components): various fixes for dark mode

--- a/components/chain/chain.module.css
+++ b/components/chain/chain.module.css
@@ -10,9 +10,6 @@
   justify-content: center;
 }
 
-.name {
-}
-
 .chainInfoContainer {
   display: flex;
   align-items: flex-start;
